Layout Updates on 15/02

--- a/app/src/main/res/layout/activity_character_view.xml
+++ b/app/src/main/res/layout/activity_character_view.xml
@@ -30,6 +30,8 @@
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:foreground="@drawable/gradient_overlay"
+                android:foregroundGravity="fill"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 android:minHeight="100dp" />
