--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:folk.jettech.com.folk="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="folk.jettech.com.folk.MainActivity">
     <item
         android:id="@+id/share"
         android:icon="@drawable/ic_share_black_24dp"
-        android:iconTint="@android:color/white"
         android:title="@string/share"
-        app:showAsAction="always" />
+        android:orderInCategory="10"
+        folk.jettech.com.folk:showAsAction="always" />
 
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
-        app:showAsAction="never"/>
+        folk.jettech.com.folk:showAsAction="never" />
+
+    <item
+        android:id="@+id/media"
+        android:title="@string/media"
+        folk.jettech.com.folk:showAsAction="never" />
+
+    <item
+        android:id="@+id/search"
+        android:title="@string/search"
+        folk.jettech.com.folk:showAsAction="never" />
 </menu>
