--- a/app/src/main/res/layout/character_item_view.xml
+++ b/app/src/main/res/layout/character_item_view.xml
@@ -8,10 +8,13 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view_simple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_card_sides_margin"
+        android:background="?attr/selectableItemBackground"
         android:elevation="2dp"
+        android:foreground="@drawable/gradient_overlay"
         app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="2dp">
 
@@ -20,6 +23,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="@dimen/default_card_inner_padding">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/material_flat" />
 
             <TextView
                 android:id="@+id/title_item"
@@ -37,8 +46,26 @@
                 android:text="@string/subtitle"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginRight="@dimen/default_card_inner_padding"
+                android:orientation="horizontal">
 
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/share" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
