--- a/app/src/main/res/menu-v26/app_menu.xml
+++ b/app/src/main/res/menu-v26/app_menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/share"
         android:title="@string/share"
         android:icon="@drawable/ic_share_white_24dp"
+        android:iconTint="@android:color/white"
         jettech:showAsAction="ifRoom" />
 
     <item
