--- a/app/src/main/res/drawable/card_overlay_gradient.xml
+++ b/app/src/main/res/drawable/card_overlay_gradient.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
+        android:angle="360"
         android:endColor="@android:color/transparent"
-        android:startColor="#4b000000"
+        android:startColor="@color/colorPrimary"
         android:type="linear" />
 </shape>
