--- a/app/src/main/res/layout/character_item_view.xml
+++ b/app/src/main/res/layout/character_item_view.xml
@@ -4,7 +4,7 @@
     android:id="@+id/character_list_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/background_light"
+    android:background="@color/backgroundColor"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -36,12 +36,14 @@
                 android:layout_marginBottom="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:text="@string/title"
+                android:textColor="@color/tertiaryTitleColor"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
 
             <TextView
                 android:id="@+id/description_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/primaryTextColor"
                 android:text="@string/subtitle"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
@@ -51,8 +53,6 @@
                 android:layout_gravity="start"
                 android:layout_marginRight="@dimen/default_card_inner_padding"
                 android:orientation="horizontal">
-
-
 
             </LinearLayout>
 
