--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -14,28 +14,22 @@
         android:layout_gravity="start"
         app:menu="@menu/main_navigation_drawer_menu">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/activity_horizontal_margin"
             android:background="@color/colorPrimary"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:text="@string/title"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textColor="@android:color/white" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/title"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textColor="@android:color/white" />
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.design.widget.NavigationView>
 
@@ -82,10 +76,114 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view_main"
+            <LinearLayout
+                android:id="@+id/main_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/default_card_sides_margin"
+                    android:elevation="@dimen/cardview_default_elevation"
+                    android:padding="@dimen/default_card_inner_padding"
+                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    app:cardCornerRadius="2dp">
+
+                    <LinearLayout
+                        android:id="@+id/category_main_section"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/card_section_background"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                            android:layout_marginTop="@dimen/activity_horizontal_margin"
+                            android:paddingLeft="@dimen/default_card_inner_padding"
+                            android:paddingRight="@dimen/default_card_inner_padding"
+                            android:text="@string/section_title"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                            android:textColor="@android:color/white"
+                            android:textStyle="bold|italic" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/default_card_inner_padding"
+                            android:layout_marginTop="@dimen/default_card_inner_padding"
+                            android:paddingLeft="@dimen/default_card_inner_padding"
+                            android:paddingRight="@dimen/default_card_inner_padding"
+                            android:text="@string/section_description"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                            android:textColor="@android:color/white" />
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recycler_view_main"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/simple_category_items"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/default_card_sides_margin"
+                    android:elevation="@dimen/cardview_default_elevation"
+                    android:orientation="vertical"
+                    app:cardBackgroundColor="@color/cardview_light_background"
+                    app:cardCornerRadius="@dimen/default_card_radius_corner">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                            android:layout_marginTop="@dimen/activity_horizontal_margin"
+                            android:paddingLeft="@dimen/default_card_inner_padding"
+                            android:paddingRight="@dimen/default_card_inner_padding"
+                            android:text="@string/section_title"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                            android:textColor="@android:color/secondary_text_light"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/default_card_inner_padding"
+                            android:layout_marginTop="@dimen/default_card_inner_padding"
+                            android:paddingLeft="@dimen/default_card_inner_padding"
+                            android:paddingRight="@dimen/default_card_inner_padding"
+                            android:text="@string/section_description"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                            android:textColor="@android:color/tertiary_text_light" />
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/simple_items"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                        </android.support.v7.widget.RecyclerView>
+
+
+                    </LinearLayout>
+
+
+                </android.support.v7.widget.CardView>
+
+
+            </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
