--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,11 +5,15 @@
         android:id="@+id/mic"
         android:icon="@drawable/ic_mic_black_24dp"
         android:title="@string/media"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/localization"
         android:icon="@drawable/ic_my_location_black_24dp"
         android:title="@string/media"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/main_menu"
+        android:title="@string/media" />
 </menu>
