--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -122,10 +122,15 @@
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                             android:textColor="@android:color/white" />
 
-                        <android.support.v7.widget.RecyclerView
+                        <!--<android.support.v7.widget.RecyclerView
                             android:id="@+id/recycler_view_main"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent" />-->
+
+                        <android.support.v4.view.ViewPager
+                            android:id="@+id/view_pager_mid"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp"/>
 
                     </LinearLayout>
 
@@ -191,19 +196,21 @@
                             android:layout_width="match_parent"
                             android:layout_height="200dp"/>
 
-                        <android.support.v7.widget.RecyclerView
+                        <!--<android.support.v7.widget.RecyclerView
                             android:id="@+id/simple_items"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                        </android.support.v7.widget.RecyclerView>
+                        </android.support.v7.widget.RecyclerView>-->
 
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/break_content_card"
                     android:layout_width="match_parent"
+                    android:foreground="?attr/selectableItemBackground"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/default_card_sides_margin"
                     android:elevation="@dimen/cardview_default_elevation"
